package com.anmory.cloudfile.obverser;

/**
 * @author Anmory
 * @description TODO
 * @date 2025-05-13 下午11:00
 */

public abstract class Observer {
    public abstract void update();
}
